# restarter

./: .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: release.yml
cargo/: BUILD.bazel  crates.bzl
cargo/remote/: BUILD.atty-0.2.14.bazel  BUILD.regex-1.5.4.bazel  BUILD.regex-syntax-0.6.25.bazel  BUILD.serde-1.0.126.bazel  BUILD.signal-hook-0.3.9.bazel  BUILD.signal-hook-registry-1.4.0.bazel
src/: lib.rs  main.rs
