load("@rules_rust//rust:rust.bzl", "rust_library", "rust_binary")

rust_library(
    name = "restarter_lib",
    crate_name = "restarter",
    srcs = ["src/lib.rs"],
    deps = [
        "//cargo:libc",
        "//cargo:signal_hook",
        "//cargo:log",
        "//cargo:env_logger",
        "//cargo:serde_json",
    ],
)

rust_binary(
    name = "restarter",
    srcs = ["src/main.rs"],
    deps = [
        ":restarter_lib",
        "//cargo:log",
    ],
)
