load("@rules_rust//rust:rust.bzl", "rust_binary", "rust_library")

rust_library(
    name = "restarter_lib",
    srcs = ["src/lib.rs"],
    crate_name = "restarter",
    deps = [
        "//cargo:env_logger",
        "//cargo:libc",
        "//cargo:log",
        "//cargo:serde_json",
        "//cargo:signal_hook",
    ],
)

rust_binary(
    name = "restarter",
    srcs = ["src/main.rs"],
    crate_name = "restarter",
    rustc_flags = [
        "--codegen=lto",
        "-C",
        "opt-level=3",
    ],
    deps = [
        ":restarter_lib",
        "//cargo:log",
    ],
)
