load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "restarter_lib",
    srcs = ["src/lib.rs"],
    crate_name = "restarter",
    deps = all_crate_deps(normal = True)
)

rust_binary(
    name = "restarter",
    srcs = ["src/main.rs"],
    crate_name = "restarter",
    rustc_flags = [
        "--codegen=lto",
        "-C",
        "opt-level=3",
    ],
    deps = [
        ":restarter_lib",
        "@crates//:log",
    ],
)
