[package]
name = "restarter"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.9"
libc = "0.2.97"
log = "0.4.14"
env_logger = "0.8.4"
serde_json = "1.0.64"

[profile.release]
#opt-level = 'z'     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = 'abort'     # Abort on panic
#strip = 'symbols'
